feat(devsecops): optimized runtime containers organized docker-compose files updated pipelines to fix created date using nonroot user in runtime environment synced .env.example and docker compose file normalized usage of PG variables

--- a/.env.example
+++ b/.env.example
@@ -1,47 +1,46 @@
 # 🌐 Frontend
+FRONTEND_PORT=8015 # Don't forget to update CSRF_TRUSTED_ORIGINS in backend and FRONTEND_URL in backend and ORIGIN in frontend if you make changes to this.
 PUBLIC_SERVER_URL=http://server:8000 # PLEASE DON'T CHANGE :) - Should be the service name of the backend with port 8000, even if you change the port in the backend service. Only change if you are using a custom more complex setup.
 ORIGIN=http://localhost:8015
 BODY_SIZE_LIMIT=Infinity
-FRONTEND_PORT=8015
 
 # 🐘 PostgreSQL Database
-PGHOST=db
-POSTGRES_DB=database
-POSTGRES_USER=adventure
+PGHOST=db # Supposed to match the host of the postgis database
+POSTGRES_DB=adventureloga
+POSTGRES_USER=adventurelog
 POSTGRES_PASSWORD=changeme123
 
 # 🔒 Django Backend
-SECRET_KEY=changeme123
-DJANGO_ADMIN_USERNAME=admin
-DJANGO_ADMIN_PASSWORD=admin
-DJANGO_ADMIN_EMAIL=admin@example.com
-PUBLIC_URL=http://localhost:8016 # Match the outward port, used for the creation of image urls
-CSRF_TRUSTED_ORIGINS=http://localhost:8016,http://localhost:8015
-DEBUG=False
-FRONTEND_URL=http://localhost:8015 # Used for email generation. This should be the url of the frontend
-BACKEND_PORT=8016
+SECRET_KEY=changeme123 # Replace with the actual secret key
+DJANGO_ADMIN_USERNAME=admin # Replace with the actual admin username
+DJANGO_ADMIN_PASSWORD=admin  # Replace with the actual admin password
+DJANGO_ADMIN_EMAIL=admin@example.com  # Replace with the actual admin email
+BACKEND_PORT=8016 # Don't forget to update CSRF_TRUSTED_ORIGINS and PUBLIC_URL in backend, and PUBLIC_SERVER_URL in frontend if you make changes to this.
+PUBLIC_URL=http://localhost:8016 # Replace with your domain where the backend is accessible publicly, used for the creation of image urls
+CSRF_TRUSTED_ORIGINS=http://localhost:8016,http://localhost:8015 # Replace with your domain, if applicable
+FRONTEND_URL=http://localhost:8015 # Replace with your domain where the frontend is accessible, used for email generation.
+# Disabling Registration: https://adventurelog.app/docs/configuration/disable_registration.html
+# DISABLE_REGISTRATION=False
+# DISABLE_REGISTRATION_MESSAGE='Registration is disabled for this instance of AdventureLog.'
 
-# Optional: use Google Maps integration
-# https://adventurelog.app/docs/configuration/google_maps_integration.html
-# GOOGLE_MAPS_API_KEY=your_google_maps_api_key
 
-# Optional: disable registration
-# https://adventurelog.app/docs/configuration/disable_registration.html
-DISABLE_REGISTRATION=False
-# DISABLE_REGISTRATION_MESSAGE=Registration is disabled for this instance of AdventureLog.
-
-# Optional: Use email
-# https://adventurelog.app/docs/configuration/email.html
+# Integrations
+## Email: https://adventurelog.app/docs/configuration/email.html
 # EMAIL_BACKEND=email
-# EMAIL_HOST=smtp.gmail.com
-# EMAIL_USE_TLS=True
+# EMAIL_HOST=smtp.mail.com
+# EMAIL_USE_TLS=False
 # EMAIL_PORT=587
-# EMAIL_USE_SSL=False
+# EMAIL_USE_SSL=True
 # EMAIL_HOST_USER=user
 # EMAIL_HOST_PASSWORD=password
-# DEFAULT_FROM_EMAIL=user@example.com
+# DEFAULT_FROM_EMAIL=adventurelog@example.com
 
-# Optional: Use Umami for analytics
-# https://adventurelog.app/docs/configuration/analytics.html
+## Google Maps: https://adventurelog.app/docs/configuration/google_maps_integration.html
+# GOOGLE_MAPS_API_KEY=your_google_maps_api_key
+
+## Umami for analytics: https://adventurelog.app/docs/configuration/analytics.html
 # PUBLIC_UMAMI_SRC=https://cloud.umami.is/script.js # If you are using the hosted version of Umami
 # PUBLIC_UMAMI_WEBSITE_ID=
+
+# Extra configuration
+DEBUG=false # Use to enable debugging
