--- a/backend/supervisord.conf
+++ b/backend/supervisord.conf
@@ -3,12 +3,14 @@ nodaemon=true
 
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
+user=nginx
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 
 [program:gunicorn]
 command=/code/entrypoint.sh
+user=adventurelog
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
