--- a/.github/.docker-compose-database.yml
+++ b/.github/.docker-compose-database.yml
@@ -6,8 +6,8 @@ services:
     ports:
       - "127.0.0.1:5432:5432"
     environment:
-      POSTGRES_DB: database
-      POSTGRES_USER: adventure
+      POSTGRES_DB: adventurelog
+      POSTGRES_USER: adventurelog
       POSTGRES_PASSWORD: changeme123
     volumes:
       - postgres_data:/var/lib/postgresql/data/
