--- a/.github/workflows/cdn-latest.yml
+++ b/.github/workflows/cdn-latest.yml
@@ -36,11 +36,40 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: set lower case owner name
-        run: |
-          echo "REPO_OWNER=${OWNER,,}" >>${GITHUB_ENV}
+      - name: Set build metadata
+        id: vars
         env:
-          OWNER: "${{ github.repository_owner }}"
+          OWNER: '${{ github.repository_owner }}'
+        run: |
+          echo "GIT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          echo "BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_OUTPUT
+          echo "REPO_OWNER=${OWNER,,}" >> $GITHUB_OUTPUT
 
       - name: Build Docker images
-        run: docker buildx build --platform linux/amd64,linux/arm64 --push -t ghcr.io/$REPO_OWNER/$IMAGE_NAME:latest -t ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:latest ./cdn
+        run: |
+          docker buildx build \
+            --platform linux/amd64,linux/arm64 \
+            --push \
+            --build-arg GIT_SHA=${{ steps.vars.outputs.GIT_SHA }} \
+            --build-arg BUILD_DATE=${{ steps.vars.outputs.BUILD_DATE }} \
+            -t ghcr.io/${{ steps.vars.outputs.REPO_OWNER }}/$IMAGE_NAME:latest \
+            -t ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:latest \
+            ./cdn
+
+      # Notify on success
+      # - name: Notify Discord on success
+      #   if: success()
+      #   run: |
+      #     curl -H "Content-Type: application/json" \
+      #       -X POST \
+      #       -d "{\"username\": \"CI Bot\", \"content\": \"✅ Build and push succeeded for CDN latest\"}" \
+      #       ${{ secrets.DISCORD_WEBHOOK_BUILD }}
+
+      # # Notify on failure
+      # - name: Notify Discord on failure
+      #   if: failure()
+      #   run: |
+      #     curl -H "Content-Type: application/json" \
+      #       -X POST \
+      #       -d "{\"username\": \"CI Bot\", \"content\": \"❌ Build or push failed for CDN latest\"}" \
+      #       ${{ secrets.DISCORD_WEBHOOK_BUILD }}
